--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,8 +55,19 @@ jobs:
       testString: -DskipTests
       theMatrix: |
         {
-          "profile": [ "10.4.dbr", "11.3.dbr", "12.2.dbr", "13.1.dbr", "13.3.dbr", "14.0.dbr", "14.3.dbr", "15.4.dbr", "16.3.dbr"  ],
+          "profile": [ "10.4.dbr", "11.3.dbr", "12.2.dbr", "13.1.dbr", "13.3.dbr", "14.0.dbr", "14.3.dbr", "15.4.dbr"],
           "scala": [ "scala_2.12.15" ]
+        }
+    secrets: inherit
+
+  noTestBuilds_2_12_15_and_13_5:
+    uses: sparkutils/building/.github/workflows/run_build.yml@main
+    with:
+      testString: test
+      theMatrix: |
+        {
+          "profile": [ "16.4.dbr"  ],
+          "scala": [ "scala_2.12.15", "scala_2.13.5" ]
         }
     secrets: inherit
 
@@ -72,12 +83,12 @@ jobs:
     secrets: inherit
 
   publish_2_12_15_and_13_5:
-    needs: [testBuilds_2_12_15_and_13_5]
+    needs: [testBuilds_2_12_15_and_13_5, noTestBuilds_2_12_15_and_13_5]
     uses: sparkutils/building/.github/workflows/publish_build.yml@main
     with:
       theMatrix: |
         {
-          "profile": [ "Spark32", "Spark321", "Spark332", "Spark341", "Spark350" ],
+          "profile": [ "Spark32", "Spark321", "Spark332", "Spark341", "Spark350", "16.4.dbr" ],
           "scala": [ "scala_2.12.15", "scala_2.13.5" ]
         }
     secrets: inherit
@@ -88,7 +99,7 @@ jobs:
     with:
       theMatrix: |
         {
-          "profile": [ "10.4.dbr", "11.3.dbr", "12.2.dbr", "13.1.dbr", "13.3.dbr", "14.0.dbr", "14.3.dbr", "15.4.dbr", "16.3.dbr" ],
+          "profile": [ "10.4.dbr", "11.3.dbr", "12.2.dbr", "13.1.dbr", "13.3.dbr", "14.0.dbr", "14.3.dbr", "15.4.dbr" ],
           "scala": [ "scala_2.12.15" ]
         }
     secrets: inherit
