--- a/pom.xml
+++ b/pom.xml
@@ -394,15 +394,15 @@
             </properties>
         </profile>
         <profile>
-            <id>16.3.dbr</id>
+            <id>16.4.dbr</id>
             <properties>
                 <shimRuntime>16.3.dbr</shimRuntime>
                 <shimCompilationRuntime>16.3.dbr</shimCompilationRuntime>
-                <dbrCompatVersion>16.3.dbr_</dbrCompatVersion>
+                <dbrCompatVersion>16.4.dbr_</dbrCompatVersion>
                 <framelessVersion>0.16.0</framelessVersion>
                 <sparkVersion>3.5.0</sparkVersion>
                 <sparkCompatVersion>3.5</sparkCompatVersion>
-                <profileDir>16.3.dbr</profileDir>
+                <profileDir>16.4.dbr</profileDir>
                 <jacksonVersion>2.14.2</jacksonVersion> <!-- scalameter dependency is 2.9.10 so perf tests runs need to change it -->
                 <guavaVersion>15.0</guavaVersion> <!-- databricks runtime version -->
                 <parserCombinatorVersion>1.1.2</parserCombinatorVersion> <!-- databricks runtime version -->
@@ -414,7 +414,7 @@
     </profiles>
 
     <properties>
-        <revision>0.0.1-RC6</revision>
+        <revision>0.0.1-RC7-SNAPSHOT</revision>
 
         <mavenFlattenPluginVersion>1.2.7</mavenFlattenPluginVersion>
         <mavenProjectInfoReportsPluginVersion>3.4.5</mavenProjectInfoReportsPluginVersion>
