--- a/.github/workflows/publishOnly.yml
+++ b/.github/workflows/publishOnly.yml
@@ -14,6 +14,7 @@ env:
 jobs:
 
   publish_Spark2:
+    if: false
     uses: sparkutils/building/.github/workflows/publish_build.yml@main
     with:
       theMatrix: |
@@ -24,6 +25,7 @@ jobs:
     secrets: inherit
 
   publish_2_12_10:
+    if: false
     uses: sparkutils/building/.github/workflows/publish_build.yml@main
     with:
       theMatrix: |
@@ -34,6 +36,7 @@ jobs:
     secrets: inherit
 
   publish_2_12_15_and_13_5:
+    if: false
     uses: sparkutils/building/.github/workflows/publish_build.yml@main
     with:
       theMatrix: |
@@ -44,6 +47,7 @@ jobs:
     secrets: inherit
 
   publish_2_12_15:
+    if: false
     uses: sparkutils/building/.github/workflows/publish_build.yml@main
     with:
       theMatrix: |
@@ -53,12 +57,17 @@ jobs:
         }
     secrets: inherit
 
-  publish_2_12_18_and_2_13_12:
-    uses: sparkutils/building/.github/workflows/publish_build.yml@main
+  publish_2_13_16:
+    uses: sparkutils/building/.github/workflows/run_build.yml@main
     with:
+      testString: test
       theMatrix: |
         {
-          "profile": ["Spark4"],
-          "scala": ["scala_2.13.12"]
+          "profile": [ "Spark4" ],
+          "scala": [ "scala_2.13.16" ]
         }
+      sparkVersion: 3.5.5
+      hadoopVersion: 3
+      jdk: 21
+      mvnOpts: "-ea -XX:+IgnoreUnrecognizedVMOptions -Dhttp.keepAlive=false -Dmaven.wagon.http.pool=false -Dmaven.wagon.http.retryHandler.class=standard -Dmaven.wagon.http.retryHandler.count=3 -Dhttps.protocols=TLSv1.2 -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN -Dorg.slf4j.simpleLogger.showDateTime=true -Djava.awt.headless=true --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.invoke=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.net=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.util.concurrent=ALL-UNNAMED --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.base/sun.nio.cs=ALL-UNNAMED --add-opens java.base/sun.security.action=ALL-UNNAMED --add-opens java.base/sun.util.calendar=ALL-UNNAMED"
     secrets: inherit
