--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,14 @@
             </properties>
         </profile>
         <profile>
+            <id>scala_2.13.16</id><!-- spark4 dbr17 -->
+            <properties>
+                <scalaVersion>2.13.16</scalaVersion>
+                <scalaCompatVersion>2.13</scalaCompatVersion>
+                <scalatestVersion>3.0.9</scalatestVersion>
+            </properties>
+        </profile>
+        <profile>
             <id>Spark2</id> 
             <properties>
                 <dbrCompatVersion>2.4.0.oss_</dbrCompatVersion>
@@ -323,9 +331,9 @@
                 <shimRuntime>4.0.0.oss</shimRuntime>
                 <shimCompilationRuntime>4.0.0.oss</shimCompilationRuntime>
                 <dbrCompatVersion>4.0.0.oss_</dbrCompatVersion>
-                <framelessVersion>0.16.0</framelessVersion>
-                <sparkVersion>4.1.0-SNAPSHOT</sparkVersion>
-                <sparkCompatVersion>4.1</sparkCompatVersion>
+                <framelessVersion>1.0.0-RC1</framelessVersion>
+                <sparkVersion>4.0.0</sparkVersion>
+                <sparkCompatVersion>4.0</sparkCompatVersion>
                 <profileDir>4.0.0</profileDir>
                 <jacksonVersion>2.15.2</jacksonVersion> <!-- scalameter dependency is 2.9.10 so perf tests runs need to change it -->
                 <guavaVersion>15.0</guavaVersion> <!-- databricks runtime version -->
@@ -450,8 +458,8 @@
         <!-- for oss builds -->
         <snakeVersion>1.33</snakeVersion>
 
-        <shimCompilationVersion>0.2.0-RC2</shimCompilationVersion>
-        <shimRuntimeVersion>0.2.0-RC2</shimRuntimeVersion>
+        <shimCompilationVersion>0.2.0-RC5</shimCompilationVersion>
+        <shimRuntimeVersion>0.2.0-RC5</shimRuntimeVersion>
     </properties>
 <!-- -->
     <repositories>
